# perfetto

./: Android.bp  BUILD  CHANGELOG  HYBRID_STACK.md  README.md
app-startup/demo-buggy/: AndroidManifest.xml
app-startup/trace-configs/: startup.cfg
app-startup/traces/: after.pftrace  before.pftrace
binder-spam/demo-buggy/: AndroidManifest.xml
binder-spam/trace-configs/: binderspam.cfg
binder-spam/traces/: after.pftrace  before.pftrace
cpu-spin/demo-fixed/: AndroidManifest.xml
cpu-spin/trace-configs/: cpuspin.cfg
cpu-spin/traces/: after.pftrace  before.pftrace
db-ui-thread/demo-buggy/: AndroidManifest.xml
db-ui-thread/trace-configs/: dbui.cfg
db-ui-thread/traces/: after.pftrace  before.pftrace
docs/analysis/: batch-trace-processor.md  pprof-from-tree.md
docs/case-studies/: app-startup.md  binder-spam.md  cpu-spinning.md  db-on-ui-thread.md  frame-jank.md  gc-pauses.md  java-heap-allocations.md  lock-contention.md  long-trace-battery.md  main-thread-io.md  native-heap.md  perf-tutorial-series.md  thread-spam.md  view-inflation.md  wakelocks.md
docs/data-sources/: java-heap-profiler.md
docs/design/: btp-rework.md  btp-v2-plan.md
docs/visualization/: critical-path.md
examples/shared_lib/: example_shlib_track_event.c
frame-jank/: README.md
frame-jank/demo-buggy/: AndroidManifest.xml  build.sh
frame-jank/playwright/: shoot.js
frame-jank/trace-configs/: jank.cfg
gc-pauses/demo-buggy/: AndroidManifest.xml
gc-pauses/trace-configs/: gc.cfg
gc-pauses/traces/: after.pftrace
gn/standalone/: run_java_protoc.py
java-heap-alloc/demo-buggy/: build.sh
java-heap-alloc/demo-fixed/: AndroidManifest.xml
java-heap-alloc/trace-configs/: heapalloc.cfg
leakapp/: build.sh
leakapp-fixed/: AndroidManifest.xml
lock-contention/demo-fixed/: AndroidManifest.xml
lock-contention/trace-configs/: lock.cfg
lock-contention/traces/: before.pftrace
long-trace-battery/demo-buggy/: AndroidManifest.xml
long-trace-battery/trace-configs/: long-battery.cfg
long-trace-battery/traces/: after.pftrace  before.pftrace
main-thread-io/demo-buggy/: AndroidManifest.xml
main-thread-io/trace-configs/: mainio.cfg
main-thread-io/traces/: after.pftrace  before.pftrace
native-heap/demo-buggy/: build.sh
native-heap/demo-fixed/: AndroidManifest.xml
native-heap/trace-configs/: heapprofd.cfg
native-heap/traces/: after.pftrace  before.pftrace
playwright/: serve_dumps.py  shoot_final.js  shoot_objtab.js
python/test/: batch_trace_processor_unittest.py  batch_trace_processor_v2_unittest.py
python/tools/: btp_experiments.py  btp_serve.py  code_format_sql.py
src/trace_processor/: BUILD.gn  trace_processor_impl.cc
src/trace_processor/importers/android_bugreport/: BUILD.gn  COVERAGE.md  android_bugreport_reader.cc  android_bugreport_reader.h  android_dumpstate_reader.cc  android_dumpstate_reader.h  android_log_reader.h  bugreport_format.cc  bugreport_format.h  bugreport_parser_registry.cc  bugreport_parsers.h  bugreport_section_parser.h  bugreport_time.cc  bugreport_time.h  bugreport_time_unittest.cc  bugreport_timeline_emitter.cc  bugreport_timeline_emitter.h  bugreport_timeline_event.h  dumpstate_vm_traces_parser.cc  dumpsys_activity_processes_parser.cc  dumpsys_activity_services_parser.cc  dumpsys_alarm_parser.cc  dumpsys_app_hibernation_parser.cc  dumpsys_appops_parser.cc  dumpsys_audio_parser.cc  dumpsys_bluetooth_parser.cc  dumpsys_broadcasts_parser.cc  dumpsys_connmetrics_parser.cc  dumpsys_dbinfo_parser.cc  dumpsys_display_parser.cc  dumpsys_dropbox_parser.cc  dumpsys_eventlog_parser.cc  dumpsys_input_method_parser.cc  dumpsys_input_parser.cc  dumpsys_jobscheduler_parser.cc  dumpsys_media_metrics_parser.cc  dumpsys_misc_history_parser.cc  dumpsys_notification_parser.cc  dumpsys_package_parser.cc  dumpsys_power_parser.cc  (+3 more)
thread-spam/demo-fixed/: AndroidManifest.xml
thread-spam/trace-configs/: threadspam.cfg
thread-spam/traces/: after.pftrace  before.pftrace
tools/: aidl_parcel_decode  benchmark_java_sdk_device.sh  gen_android_bp  gen_c_protos  install-build-deps  run_android_sdk_host_test  run_presubmit
view-inflation/demo-fixed/: AndroidManifest.xml
view-inflation/trace-configs/: inflate.cfg
(+254 files in other folders)
