# Copyright (C) 2022 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../../../gn/perfetto.gni")
import("../../../../gn/test.gni")

source_set("android_log_event") {
  sources = [
    "android_log_event.cc",
    "android_log_event.h",
  ]
  deps = [
    "../../../../gn:default_deps",
    "../../../../include/perfetto/ext/base:base",
    "../../containers",
  ]
}

source_set("android_dumpstate_event") {
  sources = [ "android_dumpstate_event.h" ]
  deps = [
    "../../../../gn:default_deps",
    "../../../../include/perfetto/ext/base:base",
    "../../containers",
  ]
}

source_set("android_bugreport") {
  sources = [
    "android_battery_stats_history_string_tracker.cc",
    "android_battery_stats_history_string_tracker.h",
    "android_battery_stats_reader.cc",
    "android_battery_stats_reader.h",
    "android_bugreport_reader.cc",
    "android_bugreport_reader.h",
    "android_dumpstate_event_parser.cc",
    "android_dumpstate_event_parser.h",
    "android_dumpstate_reader.cc",
    "android_dumpstate_reader.h",
    "android_log_event_parser.cc",
    "android_log_event_parser.h",
    "android_log_reader.cc",
    "android_log_reader.h",
    "bugreport_format.cc",
    "bugreport_format.h",
    "bugreport_parser_registry.cc",
    "bugreport_parsers.h",
    "bugreport_section_parser.h",
    "bugreport_time.cc",
    "bugreport_time.h",
    "bugreport_timeline_emitter.cc",
    "bugreport_timeline_emitter.h",
    "bugreport_timeline_event.h",
    "chunked_line_reader.cc",
    "chunked_line_reader.h",
    "dumpstate_vm_traces_parser.cc",
    "dumpsys_activity_processes_parser.cc",
    "dumpsys_activity_services_parser.cc",
    "dumpsys_alarm_parser.cc",
    "dumpsys_app_hibernation_parser.cc",
    "dumpsys_appops_parser.cc",
    "dumpsys_audio_parser.cc",
    "dumpsys_bluetooth_parser.cc",
    "dumpsys_broadcasts_parser.cc",
    "dumpsys_connmetrics_parser.cc",
    "dumpsys_dbinfo_parser.cc",
    "dumpsys_display_parser.cc",
    "dumpsys_dropbox_parser.cc",
    "dumpsys_eventlog_parser.cc",
    "dumpsys_input_method_parser.cc",
    "dumpsys_input_parser.cc",
    "dumpsys_jobscheduler_parser.cc",
    "dumpsys_media_metrics_parser.cc",
    "dumpsys_misc_history_parser.cc",
    "dumpsys_notification_parser.cc",
    "dumpsys_package_parser.cc",
    "dumpsys_power_parser.cc",
    "dumpsys_sensorservice_parser.cc",
    "dumpsys_settings_parser.cc",
    "dumpsys_usagestats_parser.cc",
  ]
  deps = [
    ":android_dumpstate_event",
    ":android_log_event",
    "../../../../gn:default_deps",
    "../../../../include/perfetto/trace_processor",
    "../../../../include/perfetto/trace_processor:basic_types",
    "../../../../protos/perfetto/common:zero",
    "../../../../protos/perfetto/trace:zero",
    "../../../base",
    "../../sorter:sorter",
    "../../storage",
    "../../tables:tables_python",
    "../../types",
    "../../util:trace_type",
    "../../util:zip_reader",
    "../common",
  ]
}

perfetto_unittest_source_set("unittests") {
  sources = [
    "android_log_unittest.cc",
    "bugreport_time_unittest.cc",
  ]
  testonly = true
  deps = [
    ":android_bugreport",
    ":android_dumpstate_event",
    ":android_log_event",
    "../../../../gn:default_deps",
    "../../../../gn:gtest_and_gmock",
    "../../../../include/perfetto/trace_processor:storage",
    "../../../../protos/perfetto/common:zero",
    "../../../../protos/perfetto/trace:zero",
    "../../../base",
    "../../sorter",
    "../../storage",
    "../../types",
    "../common",
  ]
}
